minor html cleanup Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/Register.vm
+++ b/src/templates/screens/Register.vm
@@ -9,7 +9,9 @@
    #end 
 
    <form name="RegisterForm" action="$link.setPage("Register.vm")" method="post">
-    <input type="hidden" name="action" value="Register" /> <input type="hidden" name="nextTemplate" value="RegisterConfirm.vm" /> <input type="hidden" name="cancelTemplate" value="Login.vm" /> 
+    <input type="hidden" name="action" value="Register" /> 
+    <input type="hidden" name="nextTemplate" value="RegisterConfirm.vm" /> 
+    <input type="hidden" name="cancelTemplate" value="Login.vm" /> 
 ## Attempt to populate the Scarab API User object on re-display $data.Parameters.setProperties($scarabR.getUser()) 
 
     <div class="axial">
@@ -40,8 +42,10 @@
        <td><input name="password_confirm" type="password" size="25" /></td>
       </tr>
       <tr>
-       <td> </td>
-       <td><input type="submit" name="eventSubmit_doCancel" value="Cancel" /> <input type="submit" name="eventSubmit_doRegister" value="Register" /></td>
+       <td colspan="2">
+       <input type="submit" name="eventSubmit_doCancel" value="Cancel" /> 
+       <input type="submit" name="eventSubmit_doRegister" value="Register" />
+       </td>
       </tr>
      </table>
     </div>
