--- a/src/templates/navigations/ScarabBottom.vm
+++ b/src/templates/navigations/ScarabBottom.vm
@@ -1,22 +1,16 @@
+<div id="footer">
+<p>&copy; 2001 <a href="http://www.collab.net/">CollabNet</a> | 
+<a href="http://scarab.tigris.org/">Scarab</a> |
+<a href="$link.setPage("Links.vm")">Links</a> |
 
-<!-- copyright -->
-  <table border="0" cellpadding="0" cellspacing="0" width="100%">
-    <tr>
-      <td class="globalnav">
-    &copy; 2001&nbsp;<a href="http://www.collab.net/">CollabNet</a> | 
-    <a href="http://scarab.tigris.org/">Scarab</a> |
-    <a href="$link.setPage("Links.vm")">Links</a> |
+#if ($data.User.hasLoggedIn())
+    <a href="$link.setPage("Login.vm").setAction("Logout")">Logout</a>
+#else
+    <a href="$link.setPage("Login.vm")">Login</a>
+#end
+  </p>
 
-    #if ($data.User.hasLoggedIn())
-        <a href="$link.setPage("Login.vm").setAction("Logout")">Logout</a>
-    #else
-        <a href="$link.setPage("Login.vm")">Login</a>
-    #end
-      </td>
-    </tr>
-  </table>
-<!-- end copyright -->
-
-<p>Debugging:<br />
+<p>Debugging:
 [ $data.Parameters ]
 </p>
+</div>
