implemented AssignIssue (2.1.3) functionality.
Also broke the security tools into two pieces.  One has no attributes and can
be used in business objects.  The other is tied to RunData and is implemented
as a pull tool.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -71,13 +71,13 @@
 
 #macro ( fieldErrorMsg $field $br)
     #if ( !$field.isValid() )
-        <font color="red">$field.Message</font>$br
+       <p><font color="red">$field.Message</font></p>$br
     #end
 #end
 
 #macro ( actionErrorMsg )
     #if ($data.Message)
-        <font color="red">$data.Message</font>
+        <p><font color="red">$data.Message</font></p>
     #end
 #end
 
