--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -136,7 +136,7 @@
       <input type="radio" name="nextTemplate" value="Index.vm" /> 
           2.0.0 (Start Page) 
       <input type="radio" name="nextTemplate" value="AssignIssue.vm"/> 
-          2.1.3 (Assign Issue) - not implemented
+          2.1.3 (Assign Issue)
       </p>
 
       <div class="grouper">
